# OpenCLInAction

./: CMakeLists.txt
ch03/map_copy/: map_copy.c
ch04/double_test/: double_test.c
ch04/float_config/: float_config.c
ch04/hello_kernel/: hello_kernel.c
ch04/vector_bytes/: vector_bytes.c
ch04/vector_widths/: vector_widths.c
ch05/id_check/: id_check.c
ch05/mad_test/: mad_test.c
ch05/mod_round/: mod_round.c
ch05/op_test/: op_test.c
ch05/polar_rect/: polar_rect.c
ch05/select_test/: select_test.c
ch05/shuffle_test/: shuffle_test.c
ch06/: simple_image.c  test
ch07/atomic/: atomic.c
ch07/profile_items/: profile_items.c
ch07/profile_read/: profile_read.c
ch10/reduction/: reduction.c
ch10/reduction_complete/: reduction_complete.c
ch10/wg_test/: wg_test.c
